--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@ attrs==25.4.0
 audioop-lts==0.2.2
 contourpy==1.3.3
 cycler==0.12.1
-discord.py==2.6.4
-dotenv==0.9.9
+discord.py
+dotenv
 fonttools==4.61.1
 frozenlist==1.8.0
 idna==3.11
 kiwisolver==1.4.9
-matplotlib==3.10.8
+matplotlib
 mpmath==1.3.0
 multidict==6.7.0
 numpy==2.4.0
@@ -22,5 +22,5 @@ pyparsing==3.3.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 six==1.17.0
-sympy==1.14.0
+sympy
 yarl==1.22.0
